[project]
name = "atlasai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipython>=9.15.0",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "mmdc>=0.7.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
