[project]
name = "atlasai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipython>=9.15.0",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.7",
    "mmdc>=0.7.0",
    "llvmlite==0.48.0",
    "numba==0.66.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "unstructured==0.24.1",
    "graphviz>=0.21",
    "pygraphviz>=2.0",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pystemmer>=3.1.0",
    "bm25>=0.3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
